# UniFirstSemester

./: .gitignore  README.md  programming_notes.txt.gdoc
IPI_Einfuhrung_Praktische_Informatik/AufgabenTests/: classTest.cc  classTest.hh
IPI_Einfuhrung_Praktische_Informatik/Blatt03/: loesung.cpp
IPI_Einfuhrung_Praktische_Informatik/Blatt04/: loesung.cpp
IPI_Einfuhrung_Praktische_Informatik/Blatt05/: loesung.cpp
IPI_Einfuhrung_Praktische_Informatik/Blatt06/: loesung.cc
IPI_Einfuhrung_Praktische_Informatik/Blatt07/: ringpuffer.cc  rpnrechner.cc  umgebungsvariablen.cc
IPI_Einfuhrung_Praktische_Informatik/Blatt08/: baum.cc  fcpp.hh  haseundigel.cc  mandelbrot.cc
IPI_Einfuhrung_Praktische_Informatik/Blatt09/: Aufgabe2a.cc  Aufgabe2a.hh  fizzbuzz.js  intlist.cc  test.cc
IPI_Einfuhrung_Praktische_Informatik/Blatt11/: Aufgabe1.cc  Aufgabe2.cc
IPI_Einfuhrung_Praktische_Informatik/Notizen/: complex.cc  fibschleife.cc
IPI_Einfuhrung_Praktische_Informatik/Vorlesungen/: Donnerstag-10-jan.cpp  Donnerstag-10-jan.hh  generische_programmierung.cc  shape.cc  shape.hh
IPK_Programmierkurs/Ubungsblatt02/: legalbutwrong.cc  uebung_02_loesung.cpp
IPK_Programmierkurs/Ubungsblatt03/: loesung.cpp
IPK_Programmierkurs/Ubungsblatt04/: _gitignore.gdoc  loesung.cpp
IPK_Programmierkurs/Ubungsblatt05/: loesung.cc
IPK_Programmierkurs/Ubungsblatt07/Aufgabe1/: CMakeLists.txt  CMakeLists.txt.gdoc  main.cc  point.cc  point.hh  polygon.cc  polygon.hh  polygontest.cc
IPK_Programmierkurs/Ubungsblatt09/: mandelbrot.cc
IPK_Programmierkurs/Ubungsblatt10/: CMakeLists.txt  debug-1.cc  (+2 more)
IPK_Programmierkurs/Ubungsblatt11/Aufgabe1A/: Aufgabe1.hh  CMakeLists.txt  aufgabe1a.cc  letterfrequencies.cc  losung.hh  sanitizeword.cc  test.cc
IPK_Programmierkurs/Ubungsblatt12/sdltest/: CMakeLists.txt  externtest.cc
(+92 files in other folders)
