# cmake_minimum_required(VERSION 3.5)

# project(Aufgabe1 LANGUAGES C CXX)

# set(CMAKE_MAKE_PROGRAM "cmake --build")
# set(CMAKE_CXX_COMPILER "g++")
# set(CMAKE_CXX_STANDARD 14)

# add_executable(letterfrequencies letterfrequencies.cc)
# add_executable(wordfrequencies wordfrequencies.cc sanitizeword.cc)
# add_executable(wordfrequencies_unordered wordfrequencies_unordered.cc sanitizeword.cc)
